--- a/pages/projects.html
+++ b/pages/projects.html
@@ -12,16 +12,18 @@
     <a class="skip-link" href="#conteudo">Pular para o conteúdo</a>
     <header class="site-header" data-elevate>
       <div class="container nav">
-        <a href="../index.html" class="brand" aria-label="Ir ao topo">
+        <a href="../index.html#home" class="brand" aria-label="Ir ao topo">
           <img src="../assets/imgs/logo_vt.jpg" alt="Logo Victor Theodoro" class="brand__logo" />
           <span class="brand__name">Victor Theodoro</span>
         </a>
         <nav class="menu" aria-label="Navegação principal">
           <button class="menu__toggle" aria-expanded="false" aria-controls="menu-list">Menu</button>
           <ul id="menu-list" class="menu__list">
-            <li><a href="about.html">Sobre</a></li>
-            <li><a href="experience.html">Experiência</a></li>
-            <li><a href="projects.html">Projetos</a></li>
+            <li><a href="../index.html#sobre">Sobre</a></li>
+            <li><a href="../index.html#premios">Prêmios</a></li>
+            <li><a href="../index.html#reconhecimentos">Reconhecimentos</a></li>
+            <li><a href="../index.html#projetos">Projetos</a></li>
+            <li><a href="../index.html#skills">Skills</a></li>
             <li><a href="contact.html" class="btn btn--primary">Contato</a></li>
           </ul>
         </nav>
@@ -48,7 +50,7 @@
                 <h3>Design System Azul</h3>
                 <p>Componentes acessíveis, tokens, documentação e exemplos.</p>
                 <div class="chips"><span>React</span><span>TS</span><span>Storybook</span></div>
-                <div class="project__links"><a href="#" class="btn btn--sm">Demo</a><a href="#" class="btn btn--sm btn--ghost">Código</a></div>
+                <div class="project__links"><a href="#" class="btn btn--sm" style="pointer-events: none; opacity: 0.5;" title="Link indisponível">Demo</a><a href="#" class="btn btn--sm btn--ghost" style="pointer-events: none; opacity: 0.5;" title="Link indisponível">Código</a></div>
               </div>
             </article>
             <article class="project" tabindex="0">
@@ -59,7 +61,7 @@
                 <h3>Dashboard de Métricas</h3>
                 <p>KPIs, filtros, loading progressivo e gráficos reativos.</p>
                 <div class="chips"><span>Next.js</span><span>Node</span><span>Charts</span></div>
-                <div class="project__links"><a href="#" class="btn btn--sm">Demo</a><a href="#" class="btn btn--sm btn--ghost">Código</a></div>
+                <div class="project__links"><a href="#" class="btn btn--sm" style="pointer-events: none; opacity: 0.5;" title="Link indisponível">Demo</a><a href="#" class="btn btn--sm btn--ghost" style="pointer-events: none; opacity: 0.5;" title="Link indisponível">Código</a></div>
               </div>
             </article>
             <article class="project" tabindex="0">
@@ -70,7 +72,7 @@
                 <h3>Performance Lab</h3>
                 <p>Laboratório de LCP, TTFB, caching e otimizações.</p>
                 <div class="chips"><span>Web</span><span>Perf</span><span>CI</span></div>
-                <div class="project__links"><a href="#" class="btn btn--sm">Demo</a><a href="#" class="btn btn--sm btn--ghost">Código</a></div>
+                <div class="project__links"><a href="#" class="btn btn--sm" style="pointer-events: none; opacity: 0.5;" title="Link indisponível">Demo</a><a href="#" class="btn btn--sm btn--ghost" style="pointer-events: none; opacity: 0.5;" title="Link indisponível">Código</a></div>
               </div>
             </article>
           </div>
