--- a/pages/experience.html
+++ b/pages/experience.html
@@ -12,16 +12,18 @@
     <a class="skip-link" href="#conteudo">Pular para o conteúdo</a>
     <header class="site-header" data-elevate>
       <div class="container nav">
-        <a href="../index.html" class="brand" aria-label="Ir ao topo">
+        <a href="../index.html#home" class="brand" aria-label="Ir ao topo">
           <img src="../assets/imgs/logo_vt.jpg" alt="Logo Victor Theodoro" class="brand__logo" />
           <span class="brand__name">Victor Theodoro</span>
         </a>
         <nav class="menu" aria-label="Navegação principal">
           <button class="menu__toggle" aria-expanded="false" aria-controls="menu-list">Menu</button>
           <ul id="menu-list" class="menu__list">
-            <li><a href="about.html">Sobre</a></li>
-            <li><a href="experience.html">Experiência</a></li>
-            <li><a href="projects.html">Projetos</a></li>
+            <li><a href="../index.html#sobre">Sobre</a></li>
+            <li><a href="../index.html#premios">Prêmios</a></li>
+            <li><a href="../index.html#reconhecimentos">Reconhecimentos</a></li>
+            <li><a href="../index.html#projetos">Projetos</a></li>
+            <li><a href="../index.html#skills">Skills</a></li>
             <li><a href="contact.html" class="btn btn--primary">Contato</a></li>
           </ul>
         </nav>
