Update da materia do estadao

--- a/index.html
+++ b/index.html
@@ -91,69 +91,62 @@
         <div class="container" data-reveal>
           <h2 class="section__title">Prêmios e Méritos</h2>
           
-          <!-- FETEPS - Destaque Especial -->
-          <article class="project project--featured project--feteps" tabindex="0" style="grid-column: 1 / -1; margin-bottom: 24px;">
-            <div class="project__media">
-              <img src="assets/imgs/Feteps-2025.jpg" alt="Equipe premiada no 16° FETEPS 2025" />
+          <div class="timeline">
+            <div class="timeline__item">
+              <div class="timeline__content timeline__content--gold">
+                <h3>🏆 7º Lugar • 16° FETEPS - Melhor Projeto</h3>
+                <p class="lead">Maior Feira de Tecnologia Pública da América Latina <span class="badge badge--gold">FETEPS</span></p>
+                <p>Representante do projeto WACS da Etec de Registro no maior evento acadêmico de tecnologia e inovação do Brasil. Reconhecido por inovação, acessibilidade e qualidade técnica do projeto na Feira Tecnológica do Centro Paula Souza.</p>
+                <div class="chips"><span>FETEPS 2025</span><span>Centro Paula Souza</span><span>Inovação</span><span>Acessibilidade</span></div>
+                <span class="timeline__meta">Outubro 2025 • ETEC</span>
+              </div>
             </div>
-            <div class="project__body">
-              <h3>🏆 7º Lugar • 16° FETEPS - Melhor Projeto</h3>
-              <p class="lead" style="margin: 8px 0; font-size: 16px; font-weight: 700; color: var(--gold);">
-                Maior Feira de Tecnologia Pública da América Latina <span class="badge badge--gold">FETEPS</span>
-              </p>
-              <p>Representante do projeto WACS da Etec de Registro no maior evento acadêmico de tecnologia e inovação do Brasil. Reconhecido por inovação, acessibilidade e qualidade técnica do projeto na Feira Tecnológica do Centro Paula Souza.</p>
-              <div class="chips"><span>FETEPS 2025</span><span>Centro Paula Souza</span><span>Inovação</span><span>Acessibilidade</span></div>
-              <span class="timeline__meta">Outubro 2025 • ETEC</span>
-            </div>
-          </article>
-
-          <div class="projects grid grid--3">
-            <article class="project" tabindex="0">
-              <div class="project__body">
+            <div class="timeline__item">
+              <div class="timeline__content">
                 <h3>🥇 1º Lugar • Votação Popular 6ª FETEC</h3>
                 <p>Projeto WACS - Autonomia Inteligente para PCDs. Reconhecido pelo impacto social e inovação. Campeão pela segunda vez consecutiva na feira com projetos diferentes.</p>
                 <div class="chips"><span>FETEC 2025</span><span>Etec Registro</span><span>Impacto Social</span></div>
                 <span class="timeline__meta">Outubro 2025</span>
               </div>
-            </article>
-            <article class="project" tabindex="0">
-              <div class="project__body">
+            </div>
+            <div class="timeline__item">
+              <div class="timeline__content">
                 <h3>🥇 1º Lugar • Votação Popular 5ª FETEC</h3>
                 <p>Projeto sobre Educação Sexual reconhecido pela relevância e impacto na comunidade. Conquista obtida durante o 2º ano do Ensino Médio no curso de Desenvolvimento de Sistemas.</p>
                 <div class="chips"><span>FETEC 2024</span><span>Etec Registro</span><span>Educação</span></div>
                 <span class="timeline__meta">Outubro 2024</span>
               </div>
-            </article>
-            <article class="project" tabindex="0">
-              <div class="project__body">
+            </div>
+            <div class="timeline__item">
+              <div class="timeline__content">
                 <h3>🥇 1º Lugar • Campeonato Brasileiro de Fisiculturismo</h3>
                 <p>Campeão do 7º Campeonato Brasileiro de Fisiculturismo na categoria Men's Physique Sub Junior até 18 anos. Federação L.P.M., realizado em Osasco-SP.</p>
                 <div class="chips"><span>Fisiculturismo</span><span>L.P.M.</span><span>2024</span></div>
                 <span class="timeline__meta">Setembro 2024</span>
               </div>
-            </article>
-            <article class="project" tabindex="0">
-              <div class="project__body">
+            </div>
+            <div class="timeline__item">
+              <div class="timeline__content">
                 <h3>🥇 1º Lugar • Campeonato RoboCode ETEC Registro</h3>
                 <p>Primeiro lugar no Campeonato de RoboCode, resultando na seleção como finalista para representar a instituição na segunda fase, competindo contra outras unidades.</p>
                 <div class="chips"><span>RoboCode</span><span>ETEC</span><span>Java</span></div>
                 <span class="timeline__meta">Agosto 2023</span>
-                <div class="project__links" style="margin-top: 12px;">
+                <div class="project__links">
                   <a href="https://github.com/vftheodoro/BarbieScript-RoboCode" target="_blank" rel="noopener noreferrer" class="btn btn--sm btn--ghost">Ver projeto</a>
                 </div>
               </div>
-            </article>
-            <article class="project" tabindex="0">
-              <div class="project__body">
+            </div>
+            <div class="timeline__item">
+              <div class="timeline__content">
                 <h3>🥈 2º Lugar • Torneio Estadual de RoboCode</h3>
                 <p>Segundo lugar no Torneio de RoboCode organizado pelo Centro Paula Souza. Destaque por excepcionais habilidades de programação e estratégia robótica com o projeto BarbieScript.</p>
                 <div class="chips"><span>RoboCode</span><span>Centro Paula Souza</span><span>Java</span></div>
                 <span class="timeline__meta">Setembro 2023</span>
-                <div class="project__links" style="margin-top: 12px;">
+                <div class="project__links">
                   <a href="https://github.com/vftheodoro/BarbieScript-RoboCode" target="_blank" rel="noopener noreferrer" class="btn btn--sm btn--ghost">Ver projeto</a>
                 </div>
               </div>
-            </article>
+            </div>
           </div>
         </div>
       </section>
@@ -185,17 +178,31 @@
                     <img src="assets/imgs/estadao.jpg" alt="Equipe do projeto no estande da FETEPS 2025" loading="lazy" decoding="async" onerror="this.parentElement.classList.add('no-img'); this.parentElement.setAttribute('data-alt', this.alt); this.style.display='none';" />
                   </div>
                   <div class="project__body">
-                    <h3>📰 Entrevista • Estadão <span class="badge badge--danger">Em breve</span></h3>
+                    <h3>📰 Entrevista • Estadão</h3>
                     <p>Reconhecimento do Estadão durante a FETEPS 2025 pela relevância e impacto do WACS na mobilidade inclusiva e acessibilidade.</p>
                     <div class="chips"><span>FETEPS 2025</span><span>WACS</span><span>Impacto Social</span></div>
                     <div class="project__links">
-                      <a href="#" target="_blank" rel="noopener noreferrer" class="btn btn--sm" style="pointer-events: none; opacity: 0.5;" title="Link indisponível">Ver matéria</a>
+                      <a href="https://www.estadao.com.br/tv/brasil/de-capacete-que-chama-o-samu-a-arara-falante-conheca-projetos-de-alunos-de-sp/" target="_blank" rel="noopener noreferrer" class="btn btn--sm" title="Ver matéria no Estadão">Ver matéria</a>
                     </div>
                   </div>
                 </article>
               </div>
-            </div>
-            <div class="swiper-slide">
+              <div class="swiper-slide">
+                <article class="project" tabindex="0">
+                  <div class="project__media media--placeholder" aria-label="Imagem em breve">
+                    <span>Imagem em breve</span>
+                  </div>
+                  <div class="project__body">
+                    <h3>📰 Citação • Estadão (impresso e digital)</h3>
+                    <p>Menção direta ao projeto WACS – Wheelchair Automation Control System durante a FETEPS. Reconhecimento nacional destacando inovação, acessibilidade e impacto social.</p>
+                    <div class="chips"><span>Inovação</span><span>Tecnologia</span><span>Acessibilidade</span><span>WACS</span><span>FETEPS</span><span>Estadão</span></div>
+                    <div class="project__links">
+                      <a href="#" target="_blank" rel="noopener noreferrer" class="btn btn--sm btn--ghost" style="pointer-events: none; opacity: .6;" title="Link será adicionado">Link em breve</a>
+                    </div>
+                  </div>
+                </article>
+              </div>
+              <div class="swiper-slide">
                 <article class="project" tabindex="0">
                   <div class="project__media">
                     <img src="assets/imgs/camera-prefeitura.png" alt="Citação do projeto WACS na Câmara Municipal de Registro" loading="lazy" decoding="async" />
